--- a/Individual/gridstyle.css
+++ b/Individual/gridstyle.css
@@ -1,5 +1,6 @@
 body{
     margin: 70px;
+    height: 1000px;
 }
 
 .contenedor{
@@ -29,6 +30,9 @@ body{
     height: 20%;
     display: flex;
     justify-content:space-between;
+    top: 10px;
+    position: sticky;
+    background-color: white;
 }
 
 .primero_tres{
@@ -131,7 +135,7 @@ body{
     display: flex;
 }
 
-#user_photo{
+.inserta_comentario #user_photo{
     border-radius: 50%;
 }
 
@@ -154,9 +158,27 @@ input{
 
 .guardado{
     width: 100%;
-    height: 25%;
+    height: 30%;
+    display: flex;
+    align-items:center;
+    position: absolute;
+    bottom: 0;
+    z-index: -1;
 }
 
+#texto7{
+    color: black;
+    text-decoration: none;
+    font-weight: bold;
+    margin-right: 8px;
+    font-size: 15px;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.guardado #user_keep{
+    border-radius: 50%;
+    margin-right: 9px;
+}
 
 .imagen{
     min-width: 100%;
