--- a/Pinterest_P/assets/css/Pinterest_style.css
+++ b/Pinterest_P/assets/css/Pinterest_style.css
@@ -7,12 +7,23 @@
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    margin: 15px 10px;
+    padding: 15px;
 }
 
+.button_nav_1{
+    border: black 2px solid;
+    border-radius: 50px;
+    font-family: quick;
+    font-size:  larger;
+}
+
+input{
+    width: 400px;
+}
 .icons{
     display: flex;
     flex-direction: row;
+    justify-content: flex-end;
     
 }
 
@@ -22,11 +33,29 @@
     align-items: center;
     justify-content: center;
     width: 50px;
-    border: 1px black solid ;
+    border: 4px black solid ;
     border-radius: 50%;
-    border-style: none;
+}
+
+.NavIcon:hover{
+    color: black;
+    background-color: rgb(0, 139, 46);
+    transition: all .3s;
 }
 
 .NavIcon:active{
-    background-color: aqua;
+    border: 4px rgb(106, 140, 255) solid
+}
+.NavIcon:visited{
+    border: 4px rgb(106, 255, 168) solid
+}
+
+.Menu_Notif{
+    display: none;
+    flex-direction: column;
+    width: 200px;
+}
+
+.Menu_Notif:hover{
+    background-color: black;
 }
