--- a/Pinterest_P/assets/css/main.css
+++ b/Pinterest_P/assets/css/main.css
@@ -8,14 +8,12 @@ body{
     padding:0;
 }
 
-img{
-    width: 100%;
-}
-
 .padre{
     display: flex;
     padding: 5px;
     flex-wrap: wrap;
+    position: relative;
+    top:100px;   
 }
 
 
@@ -25,18 +23,20 @@ img{
 }
 
 .adjustment{
-    margin-top: 5px;   
     border-radius: 20px;    
 }
 
 .column img{    
-    background-color:aliceblue;        
+    background-color:aliceblue;    
+    display: inline-block;    
+    width: 100%;
 }
 
 .card
 {
     position: relative;
     cursor: zoom-in;
+    margin-bottom: 10px;
 }
 
 .card .pins
@@ -49,22 +49,17 @@ img{
 
 }
 
-.overlay{
-    display: none;
-    position: absolute;
-    width:100%;
-    height:99%;
-    top: 0;
-    left: 0;
-    background-color: #211922;
-    opacity: 0.7;
-    margin-bottom: 10px;
-   
-
+.card .link{
+    display: inline-block;
+    position: relative;
+    z-index: 1000;
+    cursor:zoom-in;                
+    border-radius: 24px;
 }
 
-.card:hover .overlay{
-    display: block !important;
+.card:hover .link{    
+    background-color: #211922;
+    opacity: 0.7;
     z-index: 1;
 }
 
@@ -84,7 +79,7 @@ img{
     padding: 12px 15px 12px 15px; 
     font-weight: 700;
     color: white ;  
-    text-decoration: none; 
+    text-decoration: none;     
 }
 
 @media (max-width: 800px) {
